Actualizacion de Webpack, Babel, React y funcionalidad de multiplicacion, suma, resta y clear

--- a/src/components/Screen/screenstyle.scss
+++ b/src/components/Screen/screenstyle.scss
@@ -1,6 +1,7 @@
 .screendesign{
     position: relative;
-    width: 20%;
-    height: 10%;
+    display: inline-flex;
+    width: 50%;
+    height: 15%;
     background-color: gray;
 }
