--- a/src/components/Boton/botonstyle.scss
+++ b/src/components/Boton/botonstyle.scss
@@ -1,5 +1,8 @@
 .numberbutton{
+    display: flex;
+    align-content: center;
+    justify-content: center;
     width: 50px;
     height: 50px;
-    background-color: aqua;
+    background-color: lightgray;
 }
