--- a/src/components/Boton/botonstyle.scss
+++ b/src/components/Boton/botonstyle.scss
@@ -1,8 +1,9 @@
 .numberbutton{
+    position: relative;
     display: flex;
     align-content: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
     background-color: lightgray;
 }
