--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,8 @@
-.calcu{
-    grid: 20% 20% 20% 20%;
-    grid-row: auto;
-    grid-column: auto;
+.grid-container{
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-rows: 30%;
+    grid-template-columns: 20% 20% 20% 20%;
+    grid-row-start: auto;
 }
