--- a/src/components/Screen/screenstyle.scss
+++ b/src/components/Screen/screenstyle.scss
@@ -1,7 +1,10 @@
 .screendesign{
     position: relative;
-    display: inline-flex;
+    text-align: right;
+    overflow: hidden;
     width: 100%;
+    min-height: 70px;
     height: 100%;
     background-color: gray;
+    grid-column: 1 / span 4;
 }
