--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,6 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-rows: 30%;
+    grid-template-rows: 35% 20% 20% 20% 20%;
     grid-template-columns: 20% 20% 20% 20%;
-    grid-row-start: auto;
 }
